# swiss-knife

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  MCP.md  README.md  ROADMAP.md  SECURITY.md  context.md  knife_mcp_server.py  main.py  mcp-config.json  pyproject.toml  setup.sh
scripts/: setup.ps1
tools/: _template.py  clip.py  compress.py  convert.py  encryption.py  fetch.py  find_dup.py  img_info.py  merge_pdf.py  qr.py  rembg_tool.py  transcribe.py  transform.py
